--- a/st.css
+++ b/st.css
@@ -121,3 +121,40 @@ h2 {
     bottom: 25%;
     left: 25%;
 }
+
+/*E or O*/
+
+.center {
+    text-align: center;   
+}
+
+#choice {
+    margin-top: 1%;
+    font-size: 20px;
+}
+
+.po {
+    margin-right: 5%;
+}
+
+#pch {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-family: monospace;
+}
+
+#num {
+    margin-top: 3%;
+    width: 10%;
+    font-size: 20px;
+}
+
+#back2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    background-color: rgb(252, 163, 131);
+    position: absolute;
+    bottom: 25%;
+    left: 25%;
+}
