--- a/st.css
+++ b/st.css
@@ -73,11 +73,13 @@ a{
 
 /* RPC */
 
+#trpg {
+    font-size: 50px;
+}
+
 h2 {
     display: flex;
     justify-content: center;
-    font-size: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 5%;
     margin-left: 5%;
 }
@@ -124,6 +126,10 @@ h2 {
 
 /*E or O*/
 
+#teo {
+    font-size: 50px;
+}
+
 .center {
     text-align: center;   
 }
@@ -154,6 +160,31 @@ h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: black;
     background-color: rgb(252, 163, 131);
+    position: absolute;
+    bottom: 25%;
+    left: 25%;
+}
+
+/*Guess the number*/
+
+#tg {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    margin-top: 5%;
+    margin-left: 1%;
+}
+
+#n {
+   margin-top: 3%;
+   width: 9%;
+   font-size: 25px;
+}
+
+#back3 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    background-color: rgb(141, 91, 153);
     position: absolute;
     bottom: 25%;
     left: 25%;
